<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>
    <string name="near_the">Near the</string>
    <string name="no_earthquakes">No earthquakes found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>
    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Limit Preference [CHAR LIMIT=30] -->
    <string name="settings_limit_default" translatable="false">12</string>
    <string name="settings_limit_key" translatable="false">limit</string>
    <string name="settings_limit_label" translatable="false">Limit of Earthquake</string>

    <!-- Strings For order By Preference [CHAR LIMIT=30] -->
    <string-array name="order_by">
        <item>Time</item>
        <item>Magnitude</item>
    </string-array>
    <string-array name="order_by_values">
        <item>time</item>
        <item>magnitude</item>
    </string-array>
    <string name="settings_order_by_key" translatable="false"><orde></orde>rby</string>
    <string name="settings_order_by_label" translatable="false">Order by</string>
    <string name="settings_order_by_default" translatable="false">time</string>

</resources>
